--- a/src/Components/FaceRecognition/FaceRecognition.css
+++ b/src/Components/FaceRecognition/FaceRecognition.css
@@ -3,3 +3,12 @@
     min-width: 25rem;
     height: auto;
 }
+
+.bounding-box {
+    position: absolute;
+    box-shadow: 0 0 0 3px #149df2 inset;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    cursor: pointer;
+}
