--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,12 @@
 
 .test {
   position: absolute;
+  justify-content: center;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 100%;
+
 }
