--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,9 @@
   right: 0;
   bottom: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  z-index: -1;
 }
 
-
-.test {
+.component{
   position: absolute;
-  justify-content: center;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
 }
